# FreeLingServer

./: .gitignore  CMakeLists.txt  README.md
scripts/: freelingcrow.service  freelingserver.service
src/: analyzer.cpp  analyzer.h  api.cpp  config.cpp  config.h  html_util.cpp  html_util.h  main.cpp  main_api.h  main_crow.cpp  main_symbols.hh  preposition_utils.cpp  preposition_utils.h  sequence_processor.cpp  sequence_processor.h  string_util.cpp  string_util.h  symbols.hh  union_utils.cpp  union_utils.h  utils.cpp  utils.h
test/: simple-test.cpp  sp.test.cpp  sp_test.cpp  utils.test.cpp
